Some more work on how I track system access

--- a/it_modernization/raw_data/agencies.yaml
+++ b/it_modernization/raw_data/agencies.yaml
@@ -152,6 +152,9 @@
   id: NASA
   doge_base: true
 
+- name: National Archives
+  id: NARA
+
 - name: National Endowment for the Humanities
   id: NEH
   doge_base: true
