--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,17 @@
 repos:
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v5.0.0
+  hooks:
+  - id: check-yaml
+  - id: end-of-file-fixer
+  - id: trailing-whitespace
+  - id: check-executables-have-shebangs
+  - id: debug-statements
+  - id: check-merge-conflict
+- repo: https://github.com/psf/black
+  rev: 25.1.0
+  hooks:
+  - id: black
 - repo: local
   hooks:
   - id: pre-commit-modernization
