--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,9 +14,21 @@ repos:
   - id: black
 - repo: local
   hooks:
-  - id: pre-commit-modernization
-    name: "IT Modernization Pre-Commit"
+  - id: preprocess-events
+    name: Preprocess the events file
     types: [ file ]
-    files: it_modernization
-    entry: "it_modernization/scripts/publish"
-    language: script
+    files: it_modernization/raw_data/events.yaml
+    entry: "cd ./id_modernization && pipenv run it_modernization/scripts/preprocess/01_preprocess_events_yaml.py"
+    language: system
+  - id: preprocess-join-csvs
+    name: Preprocess the join table CSVs
+    types: [ file ]
+    files: it_modernization/raw_data/events.yaml
+    entry: "cd ./id_modernization && pipenv run it_modernization/scripts/preprocess/01_preprocess_join_tables_csv.py"
+    language: system
+  # - id: pre-commit-modernization
+  #   name: "IT Modernization Pre-Commit"
+  #   types: [ file ]
+  #   files: it_modernization
+  #   entry: "it_modernization/scripts/publish"
+  #   language: script
