--- a/it_modernization/raw_data/events.yaml
+++ b/it_modernization/raw_data/events.yaml
@@ -1642,7 +1642,7 @@
 
 - date: 2025-02-11
   type: promotion
-  event: Greg Hogan is formally named the CIO of OPM
+  event: Greg Hogan is now formally named the CIO of OPM
   comment: Just using effective date of SF-50. Salary remains same at $195,200
   named:
   - Greg Hogan
