Testing pre-commit hooks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,14 +17,14 @@ repos:
   - id: preprocess-events
     name: Preprocess the events file
     types: [ file ]
-    files: it_modernization/raw_data/events.yaml
+    files: it_modernization
     entry: "cd ./it_modernization && pipenv run python scripts/01_preprocess_events_yaml.py"
     pass_filenames: false
     language: system
   - id: preprocess-join-csvs
     name: Preprocess the DB table CSVs
     types: [ file ]
-    files: it_modernization/raw_data/events.yaml
+    files: it_modernization
     pass_filenames: false
     entry: "cd ./it_modernization && pipenv run python scripts/02_preprocess_db_tables.py"
     language: system
@@ -32,7 +32,7 @@ repos:
   - id: generate-aliases-yaml
     name: Generate the aliases file
     types: [ file ]
-    files: it_modernization/raw_data/
+    files: it_modernization
     pass_filenames: false
     entry: "cd ./it_modernization && pipenv run python scripts/11_generate_aliases_yaml.py"
     language: system
@@ -40,7 +40,7 @@ repos:
   - id: generate-events-yaml
     name: Generate the events.yaml file
     types: [ file ]
-    files: it_modernization/(aliases.yaml|raw_data/)
+    files: it_modernization
     pass_filenames: false
     entry: "cd ./it_modernization && pipenv run python scripts/12_generate_events_yaml.py"
     language: system
@@ -48,7 +48,7 @@ repos:
   - id: generate-events-csv
     name: Generate the events.csv file
     types: [ file ]
-    files: it_modernization/(events.yaml|raw_data/)
+    files: it_modernization
     pass_filenames: false
     entry: "cd ./it_modernization && pipenv run python scripts/13_generate_events_yaml.py"
     language: system
@@ -56,7 +56,7 @@ repos:
   - id: generate-postings-yaml
     name: Generate the postings.yaml file
     types: [ file ]
-    files: it_modernization/(events.yaml|raw_data/)
+    files: it_modernization
     pass_filenames: false
     entry: "cd ./it_modernization && pipenv run python scripts/14_generate_postings_yaml.py"
     language: system
@@ -64,7 +64,7 @@ repos:
   - id: generate-people-yaml
     name: Generate the people.yaml file
     types: [ file ]
-    files: it_modernization/(events.yaml|raw_data/)
+    files: it_modernization
     pass_filenames: false
     entry: "cd ./it_modernization && pipenv run python scripts/15_generate_people_yaml.py"
     language: system
@@ -72,7 +72,7 @@ repos:
   - id: generate-agency-comprehensive-yaml
     name: Generate the agency_comprehensive.yaml file
     types: [ file ]
-    files: it_modernization/(events.yaml|raw_data/)
+    files: it_modernization
     pass_filenames: false
     entry: "cd ./it_modernization && pipenv run python scripts/16_generate_agency_comprehensive_yaml.py"
     language: system
@@ -80,7 +80,7 @@ repos:
   - id: generate-mermaid-chart
     name: Generate the mermaid chart prototype
     types: [ file ]
-    files: it_modernization/(postings.yaml|raw_data/)
+    files: it_modernization
     pass_filenames: false
     entry: "cd ./it_modernization && pipenv run python scripts/17_generate_mermaid_chart_md.py"
     language: system
@@ -88,7 +88,7 @@ repos:
   - id: generate-agency-staffing-chart
     name: Generate the agency mermaid chart prototype
     types: [ file ]
-    files: it_modernization/(postings.yaml|raw_data/)
+    files: it_modernization
     pass_filenames: false
     entry: "cd ./it_modernization && pipenv run python scripts/18_generate_agency_mermaid.py"
     language: system
